[package]
name = "http-serde"
version = "1.0.2"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
description = "Serde support for the http crate. (De)serialize HeaderMap, Uri, Method, StatusCode"
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.com/kornelski/http-serde"
homepage = "https://lib.rs/crates/http-serde"
categories = ["encoding"]
keywords = ["http", "serde", "deserialize", "status", "url"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
http = "0.2.0"

[dev-dependencies]
serde_json = "1.0.47"
serde_yaml = "0.8.16"
bincode = "1.2.1"
serde_cbor = "0.11.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
